--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 cachetools==5.5.0
 google-auth==2.35.0
-google-auth-oathlib==1.2.1
+google-auth-oauthlib==1.2.1
 gspread==6.1.2
 oauthlib==3.2.2
 pyasn1_modules==0.4.1
